Add Additional Features -Ability to list all Restaurants and list their associated ids -Ability to send push notifications to pushover.net -Ability to search for party size -Ability to search multiple restaurants -Add link to directly reserve from the notification

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ EMAIL_USERNAME=""
 EMAIL_PASSWORD=""
 # recipient (doesn't have to be gmail)
 EMAIL_TO=""
+
+#pushover user
+PUSHOVER_USER=""
+#pushover token
+PUSHOVER_TOKEN=""
