--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   ],
   "license": "MIT",
   "dependencies": {
+    "async": "^3.2.2",
     "axios": "^0.21.4",
     "cheerio": "^1.0.0-rc.10",
     "dotenv": "^10.0.0",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.30",
     "@types/jest": "^27.0.1",
+    "@types/jsdom": "^16.2.13",
     "@types/lodash-es": "^4.17.5",
     "@types/node": "^12.7.11",
     "@types/nodemailer": "^6.4.4",
