--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dine-at-disney": "bin/dine-at-disney"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=20.12"
   },
   "scripts": {
     "clean-build": "rm -rf ./build",
@@ -31,23 +31,22 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.27.2",
-    "dotenv": "^16.0.2",
-    "gluegun": "^5.1.2",
-    "lodash": "^4.17.21",
-    "nodemailer": "^6.7.8"
+    "gluegun": "^5.2.2",
+    "nodemailer": "^8.0.1",
+    "playwright": "^1.58.2"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.1",
-    "@types/jsdom": "^16.2.13",
-    "@types/lodash": "^4.14.185",
-    "@types/node": "^12.7.11",
-    "@types/nodemailer": "^6.4.4",
-    "jest": "^27.1.1",
-    "prettier": "^2.4.0",
-    "ts-jest": "^27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.3.0",
+    "@types/nodemailer": "^7.0.11",
+    "jest": "^30.2.0",
+    "prettier": "^3.8.1",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
+  },
+  "overrides": {
+    "minimatch": ">=10.2.1"
   },
   "jest": {
     "preset": "ts-jest",
