--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "copy-templates": "if [ -e ./src/templates ]; then cp -a ./src/templates ./build/; fi",
     "format": "prettier --config .prettierrc.js --write **/*.{js,ts,json}",
     "build": "npm run clean-build && npm run compile && npm run copy-templates",
+    "postinstall": "playwright install chromium",
     "prepublishOnly": "npm run build",
     "test": "jest",
     "watch": "jest --watch",
