update release workflow and package.json

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,14 +16,14 @@ jobs:
 
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: '24'
           registry-url: 'https://registry.npmjs.org'
 
       - run: npm ci --ignore-scripts
 
       - run: npm test
 
-      - run: npm publish --provenance
+      - run: npm publish
 
       - name: Create GitHub release
         uses: softprops/action-gh-release@v2
